--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,51 @@
-
 <!DOCTYPE html>
-<html>
+<html><!-- BEGIN DOCUMENT -->
 
-<head>
+<head><!-- BEGIN HEAD -->
     <title>Rollie Pollie | Web Polling App</title>
-    <link type="text/css" src="/stylesheets/bootstrap.css">
-    <link type="text/css" src="/stylesheets/style.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <!--    
+        STYLE LINKS
+    -->
+    <link type="text/css" href="/stylesheets/bootstrap.css" rel="stylesheet">
+    <link type="text/css" href="/stylesheets/style.css" rel="stylesheet">
+    <link type="text/css" href="/stylesheets/animate.min.css" rel="stylesheet">
+    <link type="text/css" href="/stylesheets/font-awesome.min.css" rel="stylesheet" media="all">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+    <!--
+        SCRIPT LINKS
+    -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.js"></script>
-    
-    </script>
     <script src="/javascripts/app.js"></script>
-</head>
+    <script src="/javascripts/d3.js"></script>
+    <script src="/javascripts/directives/d3Bar.js"></script>
+    <script src="/javascripts/directives/d3Pie.js"></script>
+    <!--
+        FONTS
+    -->
+    <link href='http://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Jura|Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
 
-<body ng-app="rolliePollie">
-    <header>
+</head> <!-- END HEAD -->
+
+<body ng-app="rolliePollie"> <!-- BEGIN BODY -->
+    <header> <!-- BEGIN HEADER -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="logo">
-                        <img id="logo" src="/images/Pollie.png" alt="logo">
+                    <div class="col-md-3">
+                        <a href="#/home">
+                            <img class="rotate logo" src="/images/rollie.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="col-md-6 title">
+                        <h1>Rollie-Pollie</h1>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </header> <!-- END HEADER -->
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -34,110 +54,159 @@
         </div>
     </div>
 
-    <script type="text/ng-template" id="/home.html">
+    <script type="text/ng-template" id="/home.html"><!-- BEGIN HOME TEMPLATE -->
         <div class="container">
             <div class="row">
-                <div>
+                <div class="col-md-6 col-md-offset-3 main main-home">
+                    <div class="center">
 
-                    <h1>Rollie Pollie: Poll List</h1>
+                        <a href="#/new">
+                            <button type="button" class="btn btn-warning btn-lg hvr-buzz-out">Click Here to Create New Poll</button>
+                        </a>
 
-                </div>
-                <br />
-                <div>
-                    <a href="#/new"><h3>Create New Poll</h3></a>
-                </div>
+                        <br />
 
-                <!-- Add orderBy later --> 
+                        <h1 id="sel">Select Poll to Answer</h1>
 
-                <div ng-repeat="poll in polls">
+                        <br />
 
+                        <div ng-repeat="poll in polls.slice().reverse()">
 
-                    <p><a href="#/polls/{{poll._id}}">{{poll.question}}</a></p>
+                            <h4 class="list"><a href="#/polls/{{poll._id}}">Anwser &nbsp<i class="fa fa-arrow-right animated wobble">&nbsp</i>{{poll.question}}</a></h4>
 
+                            <a href="#/pollsResult/{{poll._id}}">
+                                <button class="btn btn-primary hvr-push">View Poll Results</button>
+                            </a>
+                            <hr />
 
-                </div> 
-
-            </div>
-        </div>
-    </script>
-    <script type="text/ng-template" id="/polls.html">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <h1>Rollie Pollie: Vote On Poll</h1>
-
-                </div>
-            </div>
-            <br />
-            <div class="row">
-
-                <div ng class="col-md-12">
-
-                    <h2>Question: {{poll.question}} </h2>
-
-                </div>
-            </div>
-            <div>
-                <p>Please select one of the following options.</p>
-                <form ng-submit="vote()">
-                    <div ng-repeat="choice in poll.choices" class="radio">
-                        <label>
-                            <input type="radio" name="choice" ng-model="" value="{{choice._id}}"> {{choice.text}}
-                        </label>
+                        </div>
                     </div>
-
-            </div>
-
-    </script>
-    <script type="text/ng-template" id="/new.html">
-        <div class="row">
-            <div class="twelve columns">
-
-                <h1>Rollie Pollie: Create New Poll</h1>
-
+                </div>
             </div>
         </div>
+    </script><!-- END HOME TEMPLATE -->
+    
+    <script type="text/ng-template" id="/polls.html"><!-- BEGIN POLLS TEMPLATE -->
         <div class="container">
-        <form role="form" ng-submit="addPoll()">
-          <div class="form-group">
-            <label for="pollQuestion">Question</label>
-            <input type="text" ng-model="poll.question" class="form-control" 
- placeholder="Enter poll question">
-          </div>
-          
-          <div class="form-group">
-            <h4>Choices</h4>
-            <div ng-repeat="choice in poll.choices">
-              <input type="text" ng-model="choice.text" class="form-control" 
-placeholder="Enter answer {{$index+1}}">
-                <br />
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 main">
+                    <div class="center">
+
+                        <h1 id="sel">Vote On Poll</h1>
+
+                    </div>
+                    <h2 id="sel">Question: <br />
+                        {{poll.question}} </h2>
+                    <br />
+
+                    <h3>Please select one of the following options: </h3>
+                    <form ng-submit="addVote()">
+                        <div ng-repeat="choice in poll.choices" class="radio">
+                            <label>
+                                <input type="radio" name="choice" ng-model="poll.userVote" value="{{choice._id}}"> {{choice.text}}
+                            </label>
+                        </div>
+                        <hr />
+                        <a href="#/home">
+                            <button type="button" class="btn btn-warning center hvr-icon-bounce" ng-click="addVote()">Vote &nbsp;</button>
+                        </a>
+                    </form>
+
+                </div>
             </div>
-          </div>   
-          
-          <div class="row">
-            <div class="col-xs-12">
-              <button type="button" class="btn btn-default" ng-click=
-"addChoice()"><span class="glyphicon glyphicon-plus">
-</span> Add another</button>
-            </div>
-          </div>
-          <p><hr></p>
-          
-          <div class="row">
-            <div class="col-xs-6">
-              <a href="#/home" class="btn btn-default "role="button">
-<span class="glyphicon glyphicon-arrow-left "></span> 
-Back to Poll List</a>
-            </div>
-            <div class="col-xs-6 ">
-              <button class="btn btn-primary pull-right" type="submit">Create Poll</button>
-            </div>
-          </div>
-        </form>
-        
         </div>
-      </script>
-      
-  </body>
-</html>
+    </script><!-- END POLLS TEMPLATE -->
+    
+    <script type="text/ng-template" id="/new.html"><!-- BEGIN NEW TEMPLATE -->
+
+        <div class="container">
+            <div class="row">
+                <div class="newForm">
+                    <div class="col-md-6 col-md-offset-3 main">
+                        <h1 id="sel">Create New Poll</h1>
+                        <form name="newPoll" role="form" ng-submit="addPoll()" novalidate>
+                            <div class="form-group">
+
+                                <h3>Question</h3>
+                                <input type="text" name="question" class="form-control" ng-model="poll.question" ng-required="true" placeholder="Enter poll question" autofocus>
+                            </div>
+
+                            <div class="form-group">
+                                <h4>Choices</h4>
+                                <div ng-repeat="choice in poll.choices">
+                                    <input type="text" name="choice" ng-model="choice.text" class="form-control" ng-required="true" placeholder="Enter answer {{$index+1}}">
+                                    <br />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <button type="button" class="btn btn-default" ng-click="addChoice()">Add another choice</button>
+                                </div>
+                            </div>
+                            <p>
+                                <hr>
+                            </p>
+                        </form>
+                        <div class="col-xs-6">
+                            <a href="#/home">
+                                <button class="btn btn-warning hvr-icon-back" type="button">Back to Poll List</button>
+                            </a>
+                        </div>
+                        <div class="col-xs-6 ">
+                            <a href="#/pollsResult{{poll._id}}">
+                                <button ng-disabled="newPoll.$invalid" class="btn btn-primary pull-right hvr-icon-fade" type="submit" ng-click="addPoll()">Create Poll</button>
+                                
+                            </a>
+                            <p class="warn pull-right">&#42 All Fields Must be completed</p>
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </script><!-- END NEW TEMPLATE -->
+    
+    <script type="text/ng-template" id="/pollsResult.html"> <!--BEGIN POLLS RESULT TEMPLATE -->
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 main">
+                    <h1 id="sel"> Poll Result </h1>
+                    <div ng-controller="selectCtrl">
+                        <select ng-model="selection" ng-options="item for item in items"></select>
+                        <p class="warn pull-right">&#42 Select different chart types</p>
+                        
+                        <div class="switchContainer" ng-switch on="selection">
+
+                            <h2>Question: &nbsp<i class="fa fa-arrow-right animated wobble">&nbsp</i>{{poll.question}}</h2>
+
+                            <div ng-switch-default>
+
+                                <pie-chart data="votes" label="text"></pie-chart>
+                                <br>
+                                <br>
+                            </div>
+
+
+                            <div ng-switch-when="Bar Chart">
+                                <bar-chart data="votes" label="text"></bar-chart>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
+    </script><!-- END POLLS RESULT TEMPLATE -->
+    
+</body><!-- END BODY -->
+
+</html><!-- END DOCUMENT -->
